@@ -1,6 +1,7 @@
 name: Build Wheels
 
-on:  
+on:
+  workflow_dispatch:
   push:
     tags:
       - '*'
@@ -22,7 +23,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build wheels
-        uses: joerick/cibuildwheel@v2.3.1
+        uses: pypa/cibuildwheel@v2.12.1
         # to supply options, put them in 'env', like:
         env:
           CIBW_BEFORE_BUILD: pip install oldest-supported-numpy
